# oop

./: .env  README.md  anime.py  env_test.py  requests_test.py
my_flask_project/: app.py  pyproject.toml
myproject/: pyproject.toml
